Fixes overflow, adds ellipses
Finally got it to work! I'm not sure exactly how... i think that
having the `overflow: hidden` and `text-overflow: ellipsis` in
combination with eachother and the `white-space: no-wrap` is what
did it in the end.

--- a/static/index.css
+++ b/static/index.css
@@ -17,25 +17,22 @@ body {
 	top: 0px;
 	left: 0px;
 	right: 0px;
+	
 	width: 100%;
 	height: 49px;
-	max-height: 50px;
-
-	margin: 0px;
-	padding: 0px;
+	border-bottom: 1px solid #000;
 
 	font-family: "Times New Roman", Times, serif;
-	
+	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	text-align: center;
 	font-size: 25px;
 
-	border-bottom: 1px solid #000;
+	z-index: 2;
 }
 
 #pageTitle a {
-	text-overflow: inherit;
 	font-size: 25px;
 	text-decoration: underline;
 }
@@ -47,8 +44,9 @@ body {
 	left: 0px;
 	right: 0px;
 	bottom: 0px;
-	
 	width: auto;
+
+	z-index: 1;
 }
 
 #text {
